# apertium-oci-fra

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  TODO  TODO_sellexic.txt  apertium-oci-fra.fra-oci.l1x  apertium-oci-fra.fra-oci.l2x  apertium-oci-fra.fra-oci.lrx  apertium-oci-fra.fra-oci.metalrx  apertium-oci-fra.fra-oci.n_a_adv.lrx  apertium-oci-fra.fra-oci.np.lrx  apertium-oci-fra.fra-oci.other.lrx  apertium-oci-fra.fra-oci.t1x  apertium-oci-fra.fra-oci.t2x  apertium-oci-fra.fra-oci.t2x_bis  apertium-oci-fra.fra-oci.t2x_enon  apertium-oci-fra.fra-oci.t2x_ini  apertium-oci-fra.fra-oci.t2x_pas  apertium-oci-fra.fra-oci.t2x_pro  apertium-oci-fra.fra-oci.t2x_supersn  apertium-oci-fra.fra-oci.t3x  apertium-oci-fra.fra-oci.t4x  apertium-oci-fra.fra-oci.v.lrx  apertium-oci-fra.oci-fra.dix  apertium-oci-fra.oci-fra.l1x  apertium-oci-fra.oci-fra.l2x  apertium-oci-fra.oci-fra.lrx  apertium-oci-fra.oci-fra.metalrx  apertium-oci-fra.oci-fra.n_a_adv.lrx  apertium-oci-fra.oci-fra.np.lrx  apertium-oci-fra.oci-fra.other.lrx  apertium-oci-fra.oci-fra.t1x  apertium-oci-fra.oci-fra.t2ax  apertium-oci-fra.oci-fra.t2ax2  apertium-oci-fra.oci-fra.t2bx  apertium-oci-fra.oci-fra.t2cx  apertium-oci-fra.oci-fra.t2dx  apertium-oci-fra.oci-fra.t2ex  (+16 more)
dev/: processar-fitxers.py
dev/testvoc/: inconsistency-summary.sh  inconsistency.sh  testvoc-summary.fra-oci.txt  testvoc-summary.fra-oci_gascon.txt  testvoc-summary.oci-fra.txt  testvoc-summary.oci_gascon-fra.txt  testvoc.sh
evaluacion/: eurotopicsfr.180627.oci.fin.txt  eurotopicsfr.180627.txt  eurotopicsfr.180629.oci.fin.txt  eurotopicsfr.180629.txt  eurotopicsfr.180719.oci.fin.txt  eurotopicsfr.180719.txt  eurotopicsfr.180720.oci.fin.txt  eurotopicsfr.180720.txt  wikipediafr.180610.oci.fin.txt  wikipediafr.180610.oci.ini.txt  wikipediafr.180610.txt  wikipediafr.180611.oci.fin.txt  wikipediafr.180611.txt  wikipediafr.180612.oci.fin.txt  wikipediafr.180612.txt  wikipediafr.180613.oci.fin.txt  wikipediafr.180613.oci.ini.txt  wikipediafr.180613.txt  wikipediafr.180621.oci.fin.txt  wikipediafr.180621.oci.ini.txt  wikipediafr.180621.txt  wikipediafr.180622.oci.fin.txt  wikipediafr.180622.oci.ini.txt  wikipediafr.180622.txt  wikipediafr.180623.oci.fin.txt  wikipediafr.180623.oci.ini.txt  wikipediafr.180623.txt  wikipediafr.180712.oci.fin.txt  wikipediafr.180712.txt  wikipediafr.180713.oci.fin.txt  wikipediafr.180713.txt  wikipediafr.180714.oci.fin.txt  wikipediafr.180714.txt  wikipediafr.180802.oci.ini.txt  wikipediafr.180802.txt  wikipediafr.180803.oci.ini.txt  wikipediafr.180803.txt  wikipediafr.180804.oci.ini.txt  wikipediafr.180804.txt  wikipediafr.180805.oci.ini.txt  (+1 more)
lexic/: f_bi.wiktion_v.txt  fra_dix_adj_wiktionnaire.txt  fra_dix_adv_wiktionnaire.txt  fra_dix_n_wiktionnaire.txt
test/: fra-oci-biltrans-expected.txt  fra-oci-chunker-expected.txt  fra-oci-chunker2-expected.txt  fra-oci-disamb-expected.txt  fra-oci-generator-expected.txt  fra-oci-input.txt  fra-oci-interchunk-expected.txt  fra-oci-lex-expected.txt  fra-oci-morph-expected.txt  fra-oci-pending-biltrans-expected.txt  fra-oci-pending-chunker-expected.txt  fra-oci-pending-chunker2-expected.txt  fra-oci-pending-disamb-expected.txt  fra-oci-pending-generator-expected.txt  fra-oci-pending-input.txt  fra-oci-pending-interchunk-expected.txt  fra-oci-pending-interchunk_pas-expected.txt  fra-oci-pending-interchunk_pro-expected.txt  fra-oci-pending-lex-expected.txt  fra-oci-pending-morph-expected.txt  fra-oci-pending-postchunk-expected.txt  fra-oci-pending-postgen-expected.txt  fra-oci-pending-postgen-gold.txt  fra-oci-pending-pretransfer-expected.txt  fra-oci-pending-tagger-expected.txt  fra-oci-postchunk-expected.txt  fra-oci-postgen-expected.txt  fra-oci-postgen-gold.txt  fra-oci-pretransfer-expected.txt  fra-oci-tagger-expected.txt  fra-oci_gascon-biltrans-expected.txt  fra-oci_gascon-chunker-expected.txt  fra-oci_gascon-chunker2-expected.txt  fra-oci_gascon-disamb-expected.txt  fra-oci_gascon-generator-expected.txt  fra-oci_gascon-generator-gold.txt  fra-oci_gascon-input.txt  fra-oci_gascon-interchunk_enon-expected.txt  fra-oci_gascon-interchunk_pas-expected.txt  fra-oci_gascon-interchunk_pro-expected.txt  (+53 more)
